quartz/styles/custom.scss
@use "./base.scss";

// Basics

// @keyframes fadeIn {
//     0% {
//         opacity: 0;
//     }
//     100% {
//         opacity: 1;
//     }
// }
:root {
    --desktopMarginTop: 6em;
    --r1: 0.0625rem;
    --r3: 0.1875rem;
    --r5: 0.3125rem;
}
html {
    font-size: 100%;
}
::selection {
    color: var(--light);
    background-color: var(--secondary);
}
body {
    color: var(--dark);
    // opacity: 0;
    // animation: fadeIn 0.2s ease-in 0.2s forwards;
}
p,
ul,
text,
a,
tr,
td,
li,
ol,
ul,
.katex,
.math {
    color: var(--dark);
    fill: var(--dark);
}
tbody,
li,
p {
    line-height: 150%;
}
p {
    margin: 1em 0;
}
h4,
h5,
h6,
thead {
    letter-spacing: -0.1875em;
}
hr {
    height: 0.0625em;
}
h1,
h2,
h3 {
    line-height: 100%;
    text-transform: uppercase;
    letter-spacing: -0.125em;
    margin-left: -0.0625em !important;
}
small {
    font-size: 0.875em;
    line-height: 125%;
}
img {
    border-radius: var(--r3);
    margin: 1em 0 0;
}
ul,
ol {
    padding: 0;
}
svg {
    stroke-linecap: butt;
}

/* Scrollbar */

// * {
//     scrollbar-color: var(--secondary) var(--light);
// }
// *::-webkit-scrollbar {
//     width: 1em;
// }
// *::-webkit-scrollbar-thumb {
//     border-radius: 1em;
//     background-color: var(--secondary);
//     border: 0.25em solid var(--light);
// }
// *::-webkit-scrollbar-thumb:hover {
//     background-color: var(--tertiary);
// }
// *::-webkit-scrollbar-track {
//     background-color: var(--light);
// }

// Links

a {
    font-weight: inherit;
    text-decoration: underline;
    color: var(--secondary);
    transition: color 0.2s ease;
} 
a:hover {
    color: var(--tertiary) !important;
}
a.internal {
    text-decoration: none;
    background-color: var(--highlight);
    padding: 0 0.125em 0.0625em;
    border-radius: var(--r3);
}
a[href^="http"]:not([href*="pmcf.xyz"])::after {
    content: " \2197";
    font-size: 0.875em;
    vertical-align: -0.03125em;
}
#explorer-content a::after {
    content: none;
}

// Before Body Wrapper

.page .page-header {
    margin: var(--desktopMarginTop) auto 1em;
}

// Breadcrumbs

nav.breadcrumb-container {
    --bcGap: 0.25em;
    font-size: 0.875em;
    color: var(--dark);
    gap: unset;
    opacity: 0.6;
}
.breadcrumb-element {
    margin-right: var(--bcGap);
}
.breadcrumb-element:last-child {
    display: none;
}
.breadcrumb-element > p {
    display: none;
}
.breadcrumb-element a {
    color: var(--dark);
}
.breadcrumb-element::after {
    content: "/";
    margin-left: var(--bcGap);
    opacity: 0.4;
}

// Heading

h1.article-title {
    margin: 0.5em 0 0.5em;
}

// Meta

p.content-meta,
.meta {
    font-size: 0.875em;
    margin-bottom: 1em;
    color: var(--gray);
    opacity: 1;
}


// Tags

ul.tags {
    gap: unset;
    margin: 0 -0.5em 1.5em 0;
}
ul.tags > li {
    display: inline-block;
    line-height: 125%;
    padding: 0;
    margin: 0 0.5em 0.5em 0;
}
ul.tags a.tag-link {
    display: inline-block;
    text-decoration: none;
    line-height: 125%;
    padding: 0 0.125em 0.0625em;
    margin: 0;
    border-radius: var(--r3);
    background-color: var(--highlight);
}

// Body

article > *:first-child {
    margin-top: 0 !important;
}
article > *:last-child {
    margin-bottom: 0 !important;
}

// Sidebars

.page > #quartz-body .sidebar {
    flex-direction: row;
    flex-wrap: wrap;
    gap: unset;
    margin-top: var(--desktopMarginTop);
}
ul.overflow > li:last-of-type,
ol.overflow > li:last-of-type {
    margin-bottom: 2rem;
}
ul.overflow:after,
ol.overflow:after {
    height: 32px;
}
.page > #quartz-body .sidebar.right > * {
    flex: 1 1 100%;
}
.page > #quartz-body .sidebar.left hr {
    margin: 0.375em 0 1.25em;
}

// Backlinks

div.backlinks > h3 {
    font-size: 0.875em;
}
div.backlinks ul.overflow {
    margin: 0.5em 0 0;
}
div.backlinks li {
    color: var(--gray);
}
div.backlinks a.internal {
    padding: 0;
}

// Page Title

h1.page-title {
    flex-basis: 100%;
    font-size: 1.25em;
    margin: 0.0625em 0 0;
}
.page-title a {
    text-decoration: none;
    color: var(--dark);
}

// Search

div.search {
    display: inline-block;
    flex-grow: unset;
    width: fit-content;
    max-width: unset;
    min-width: unset;
    margin: 0.5em 0 0.5em -0.5em;
}
div.search > #search-icon {
    width: fit-content;
    height: unset;
    border-radius: var(--r3);
    background-color: unset;
    transition: background-color .5s;
}
div.search > #search-icon:hover {
    background-color: var(--lightgray);
}
div.search > #search-icon > p {
    display: none;
    padding: 0 0.5em;
}
div.search > #search-icon > div:first-of-type {
    display: none;
}
div.search > #search-icon svg {
    display: inline-block;
    width: 1.375em;
    height: 1.375em;
    padding: 0.5625em;
    margin: 0;
}
div.search > #search-icon svg .search-path {
    stroke: var(--dark);
    stroke-width: 2px;
    transition: stroke 0.5s ease-out;
}
div.search > #search-container > #search-space {
    width: 49rem;
    margin-top: var(--desktopMarginTop);
}
div.search > #search-container > #search-space::after {
    content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 16 16' fill='none'%3E%3Cpath stroke='currentColor' stroke-linecap='butt' stroke-width='1.5' d='M2 14L14 2'/%3E%3Cpath stroke='currentColor' stroke-linecap='butt' stroke-width='1.5' d='M14 14L2 2'/%3E%3C/svg%3E");
    position: absolute;
    top: 1.25em;
    right: 1.25em;
    pointer-events: none;
}
html[saved-theme="dark"] div.search > #search-container > #search-space::after {
    content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 16 16' fill='none'%3E%3Cpath stroke='%23f8f8f6' stroke-linecap='butt' stroke-width='1.5' d='M2 14L14 2'/%3E%3Cpath stroke='%23f8f8f6' stroke-linecap='butt' stroke-width='1.5' d='M14 14L2 2'/%3E%3C/svg%3E");
}
/* ... */

